# circuitchat

./: Cargo.toml  README.md  TODO.md  circuitchat.toml
.github/workflows/: rust.yml
aur/circuitchat/: PKGBUILD
aur/circuitchat-bin/: PKGBUILD
ccscript/: commands.ccscript  example.ccscript  sendfile.ccscript
docs/: CCSCRIPT.md  CONFIG.md  FILES.md  SECURITY.md  USAGE.md
src/: bot.rs  ccscript.rs  config.rs  file_transfer.rs  files.rs  fingerprint.rs  main.rs  noise_client.rs  noise_peer.rs  storage.rs  tui.rs
